--- a/TODO_LIST/package.json
+++ b/TODO_LIST/package.json
@@ -1,10 +1,10 @@
 {
   "name": "157_todo_list",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "this is a simple todo_list",
   "main": "todo_list.js",
   "type": "module",
-  "bin": "atm.js",
+  "bin": "todo_list.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
